--- a/Views/SuperAdmin/Edit.cshtml
+++ b/Views/SuperAdmin/Edit.cshtml
@@ -53,7 +53,7 @@
 
                     <span asp-validation-for="Data.MaritalStatus" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+               @* <div class="form-group">
                     <label asp-for="Data.BankAccountNumber" class="control-label"></label>
                     <input asp-for="Data.BankAccountNumber" class="form-control" />
                     <span asp-validation-for="Data.BankAccountNumber" class="text-danger"></span>
@@ -62,7 +62,7 @@
                     <label asp-for="Data.BankName" class="control-label"></label>
                     <input asp-for="Data.BankName" class="form-control" />
                     <span asp-validation-for="Data.BankName" class="text-danger"></span>
-                </div>
+                </div>*@
             <div class="col-md-6">
                 @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
                 <div class="form-group">
