--- a/Views/Shared/_Notification.cshtml
+++ b/Views/Shared/_Notification.cshtml
@@ -1,5 +1,13 @@
 ﻿@{
-    if (TempData["Success"] != null)
+    //if (TempData["Success"] != null)
+    //{
+    //    //<script src="~/lib/jquery/dist/jquery.min.js"> </script>
+    //    <script src="~/lib/jquery/dist/jquery.min.js"> </script>
+    //    <script src="~/js/toastr.min.js"></script>
+    //    <script type="text/javascript">toastr.success('@TempData["success"]')</script>
+    //}
+    
+    if (TempData.ContainsKey("Success"))
     {
         //<script src="~/lib/jquery/dist/jquery.min.js"> </script>
         <script src="~/lib/jquery/dist/jquery.min.js"> </script>
